--- a/boatusers/package.json
+++ b/boatusers/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER='google-chrome-stable' react-scripts start",
+    "server": "cd server && nodemon server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "client-server": "concurrently \"npm run server\" \"npm start\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
