--- a/boatusers/Dockerfile
+++ b/boatusers/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14-alpine AS development
+FROM node:18.7.0-alpine AS development
 
 ENV NODE_ENV development
 
@@ -7,9 +7,8 @@ WORKDIR .
 COPY package.json .
 
 RUN npm install
-
 COPY . .
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+ENTRYPOINT ["npm", "run"]
