--- a/boatusers/package.json
+++ b/boatusers/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
@@ -24,13 +23,11 @@
     "start": "BROWSER='google-chrome-stable' react-scripts start",
     "server": "cd server && nodemon server.js",
     "build": "react-scripts build",
-    "client-server": "concurrently \"npm run server\" \"npm start\"",
-    "eject": "react-scripts eject"
+    "client-server": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -44,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "18.7.0"
   }
 }
