--- a/boatusers/docker-compose.yml
+++ b/boatusers/docker-compose.yml
@@ -5,21 +5,9 @@ services:
     container_name: bu-client-c
     build:
       context: .
-      target: development
+      target: clientBU
     volumes:
-      - ./src
+      - ./src:/src
       - ./node_modules
     ports:
-      - 3000:3000 
-    command: 'client-server' 
-  server:
-    container_name: bu-server-c
-    build:
-      context: .
-      target: development
-    volumes:
-      - ./server
-    ports:
-      - 5000:5000
-    stdin_open: true 
-    tty: true
+      - 3000:3000
