--- a/server-buApp/Dockerfile
+++ b/server-buApp/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:18.7.0-alpine AS clientBU
+FROM node:18.7.0-alpine AS serverBU
 
-ENV NODE_ENV clientBU
+ENV NODE_ENV serverBU
 
 WORKDIR .
 
@@ -9,6 +9,6 @@ COPY package.json .
 RUN npm install
 COPY . .
 
-EXPOSE 3000
+EXPOSE 5000
 
 CMD ["npm", "start"]
