--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.6.0",
-    "cors": "^2.8.5",
-    "http-proxy-middleware": "^2.0.6",
+    "mapbox-gl": "^2.12.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
