--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.3",
     "concurrently": "^7.6.0",
     "mapbox-gl": "^2.12.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
