--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.6.0",
@@ -43,5 +44,8 @@
   },
   "engines": {
     "node": "18.7.0"
+  },
+  "browser": {
+    "fs": false
   }
 }
