--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.1.3",
@@ -15,10 +17,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "redux-persist": "^6.0.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "BROWSER='google-chrome-stable' react-scripts start",
@@ -26,16 +27,15 @@
     "build": "react-scripts build",
     "client-server": "concurrently \"npm run server\" \"npm start\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not safari < 10",
+      "not chrome < 51",
+      "not android < 5",
+      "not ie < 12"
     ],
     "development": [
       "last 1 chrome version",
