--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -17,9 +17,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "BROWSER='google-chrome-stable' react-scripts start",
