--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
+    "@react-oauth/google": "^0.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.6.0",
