--- a/server-buApp/package.json
+++ b/server-buApp/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "multer": "^1.4.5-lts.1",
     "paypal-rest-sdk": "^1.8.1"
   }
 }
