--- a/client-buApp/package.json
+++ b/client-buApp/package.json
@@ -13,7 +13,9 @@
     "mapbox-gl": "^2.12.0",
     "mapbox-gl-geocoder": "^2.0.1",
     "nodemon": "^2.0.20",
+    "radium": "^0.26.2",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
